--- a/Explorator Data Analysis/Car/Car/Simple CAR EDA.ipynb
+++ b/Explorator Data Analysis/Car/Car/Simple CAR EDA.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "4  140.8 bhp    5.0        NaN  17.74  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "(7253, 14)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "4  17.74  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
        "2024"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -819,8 +819,6 @@
        "      <th>Engine (Numeric)</th>\n",
        "      <th>Mileage (Numeric)</th>\n",
        "      <th>Car_Age</th>\n",
-       "      <th>Brand</th>\n",
-       "      <th>Model</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -842,8 +840,6 @@
        "      <td>998</td>\n",
        "      <td>26.60</td>\n",
        "      <td>14</td>\n",
-       "      <td>Maruti</td>\n",
-       "      <td>wagon r</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -863,8 +859,6 @@
        "      <td>1582</td>\n",
        "      <td>19.67</td>\n",
        "      <td>9</td>\n",
-       "      <td>Hyundai</td>\n",
-       "      <td>creta 1.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -884,8 +878,6 @@
        "      <td>1199</td>\n",
        "      <td>18.20</td>\n",
        "      <td>13</td>\n",
-       "      <td>Honda</td>\n",
-       "      <td>jazz v</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -905,8 +897,6 @@
        "      <td>1248</td>\n",
        "      <td>20.77</td>\n",
        "      <td>12</td>\n",
-       "      <td>Maruti</td>\n",
-       "      <td>ertiga vdi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -926,8 +916,6 @@
        "      <td>1968</td>\n",
        "      <td>15.20</td>\n",
        "      <td>11</td>\n",
-       "      <td>Audi</td>\n",
-       "      <td>a4 new</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -948,22 +936,15 @@
        "3    Diesel       Manual      First  20.77 kmpl  1248 CC  88.76 bhp    7.0   \n",
        "4    Diesel    Automatic     Second   15.2 kmpl  1968 CC  140.8 bhp    5.0   \n",
        "\n",
-       "   Price  Power (Numeric)  Engine (Numeric)  Mileage (Numeric)  Car_Age  \\\n",
-       "0   1.75            58.16               998              26.60       14   \n",
-       "1  12.50           126.20              1582              19.67        9   \n",
-       "2   4.50            88.70              1199              18.20       13   \n",
-       "3   6.00            88.76              1248              20.77       12   \n",
-       "4  17.74           140.80              1968              15.20       11   \n",
-       "\n",
-       "     Brand       Model  \n",
-       "0   Maruti     wagon r  \n",
-       "1  Hyundai   creta 1.6  \n",
-       "2    Honda      jazz v  \n",
-       "3   Maruti  ertiga vdi  \n",
-       "4     Audi      a4 new  "
+       "   Price  Power (Numeric)  Engine (Numeric)  Mileage (Numeric)  Car_Age  \n",
+       "0   1.75            58.16               998              26.60       14  \n",
+       "1  12.50           126.20              1582              19.67        9  \n",
+       "2   4.50            88.70              1199              18.20       13  \n",
+       "3   6.00            88.76              1248              20.77       12  \n",
+       "4  17.74           140.80              1968              15.20       11  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1093,7 @@
        "[7198 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1115,7 @@
        "'Isuzu|ISUZU|Mini|Land'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1311,7 @@
        "228  Mini  Cooper Convertible  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1332,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "716"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Model'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1523,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1552,7 @@
        "695"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1748,7 @@
        "4     Audi      a4 new  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1768,7 @@
        "(7198, 18)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2001,7 @@
        "Car_Age               10.00     13.00       28.00  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2130,7 +2131,7 @@
        "Model         7197    695             swift dzire   189"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2157,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2358,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2367,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
